test/sema/positive/typevar_instantiation6.impala
trait T {}
impl T for int {}
fn myf(x: int, f: fn[B:T](B)->B) -> int {
   f[int](x)
}
