test/sema/negative/bound_checking2.impala
trait T {}
fn myf(x: int, f: fn[B:T](B)->B) -> int {
   f[int](x)
}
